[gd_scene load_steps=21 format=3 uid="uid://ddqexnw8rautf"]

[ext_resource type="Script" path="res://Player/Player.gd" id="1_jvvym"]
[ext_resource type="SpriteFrames" uid="uid://doxvkqj50g0fy" path="res://catmodels/cat-couple (1).gif" id="2_btfmq"]
[ext_resource type="Script" path="res://ScoreBar.gd" id="3_vp8ev"]
[ext_resource type="Texture2D" uid="uid://ceqcxtebggqi2" path="res://buttons/Sliders/ScrollBar_Blue_Base.png" id="3_yj5pb"]
[ext_resource type="Texture2D" uid="uid://cs8c602u1yi15" path="res://buttons/Sliders/WideSlider_Blank_Frame.png" id="4_n14yp"]
[ext_resource type="Script" path="res://Player/AnimationPlayer.gd" id="4_vps57"]
[ext_resource type="Texture2D" uid="uid://4ea1iyyfg71d" path="res://buttons/Sliders/SlimSlider_Green_Scoller.png" id="5_dlpgo"]
[ext_resource type="FontFile" uid="uid://cj6ddpgu8pfoo" path="res://materials/Burlesk-Regular.ttf" id="7_tbhcw"]
[ext_resource type="Texture2D" uid="uid://bsygms0lcdplk" path="res://materials/Hedron_1-128x128.png" id="9_ybmfh"]
[ext_resource type="PackedScene" uid="uid://ovg545ca4j4" path="res://materials/meshes/ring.tscn" id="10_smww1"]

[sub_resource type="CylinderShape3D" id="CylinderShape3D_lcq6m"]
height = 0.03
radius = 0.4

[sub_resource type="Animation" id="Animation_2llux"]
length = 0.001

[sub_resource type="Animation" id="Animation_t2at2"]
resource_name = "ScaleDown"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GifContainer/AnimatedSprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.291261, 0, 0), Vector3(-0.29147, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GifContainer/AnimatedSprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.3, 0.3, 0.3), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ring:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.6, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Ring:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 3.14159)]
}

[sub_resource type="Animation" id="Animation_w14wi"]
resource_name = "ScaleUp"
length = 0.15
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("GifContainer/AnimatedSprite3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.29147, 0, 0), Vector3(-0.29147, 6.28319, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("GifContainer/AnimatedSprite3D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.3, 0.3, 0.3)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Ring:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.15),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0.6, 0), Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_gfenq"]
_data = {
"RESET": SubResource("Animation_2llux"),
"ScaleDown": SubResource("Animation_t2at2"),
"ScaleUp": SubResource("Animation_w14wi")
}

[sub_resource type="Curve" id="Curve_6wknc"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.586957, 0.747253), 0.0, 0.0, 0, 0, Vector2(0.985507, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_xufim"]
curve = SubResource("Curve_6wknc")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xo1hi"]
emission_shape = 1
emission_sphere_radius = 0.3
direction = Vector3(0, 2, 0)
spread = 25.0
initial_velocity_min = 5.0
initial_velocity_max = 7.0
gravity = Vector3(0, -20, 0)
scale_min = 0.5
scale_curve = SubResource("CurveTexture_xufim")
color = Color(0, 1, 3, 1)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_w46d6"]
transparency = 1
blend_mode = 1
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("9_ybmfh")

[sub_resource type="QuadMesh" id="QuadMesh_1v6xk"]
material = SubResource("StandardMaterial3D_w46d6")
size = Vector2(0.1, 0.1)

[node name="Player" type="CharacterBody3D"]
transform = Transform3D(0.7, 0, 0, 0, 0.7, 0, 0, 0, 0.7, 0, 0, 0)
script = ExtResource("1_jvvym")

[node name="GifContainer" type="Node3D" parent="."]
transform = Transform3D(1.3, 0, 0, 0, 1.3, 0, 0, 0, 1.3, 0.0183283, 0.379958, -0.0780777)

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="GifContainer"]
transform = Transform3D(0.3, 0, 0, 0, 0.287365, 0.0861481, 0, -0.0861481, 0.287365, 0, -0.166861, -0.0128124)
sprite_frames = ExtResource("2_btfmq")
animation = &"gif"
autoplay = "gif"
frame = 13
frame_progress = 0.303619

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00790134, 0)
shape = SubResource("CylinderShape3D_lcq6m")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.94818, -1.4129e-08, -0.317735, 0.0882085, 0.960692, 0.26323, 0.305245, -0.277616, 0.910909, -0.235191, 0.678022, 1.11221)

[node name="ScoreBar" type="TextureProgressBar" parent="."]
custom_minimum_size = Vector2(100, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -117.0
offset_top = 184.0
offset_right = 117.0
offset_bottom = 252.0
grow_horizontal = 2
grow_vertical = 2
max_value = 1000.0
value = 400.0
nine_patch_stretch = true
texture_under = ExtResource("3_yj5pb")
texture_over = ExtResource("4_n14yp")
texture_progress = ExtResource("5_dlpgo")
script = ExtResource("3_vp8ev")

[node name="ScoreLabel" type="Label" parent="ScoreBar"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("7_tbhcw")
theme_override_font_sizes/font_size = 34
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.937913, 0.34687, 0, -0.34687, 0.937913, 0, 0.751358, 1.03145)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_gfenq")
}
script = ExtResource("4_vps57")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.267901, 0.316323)
emitting = false
lifetime = 0.3
one_shot = true
explosiveness = 1.0
process_material = SubResource("ParticleProcessMaterial_xo1hi")
draw_pass_1 = SubResource("QuadMesh_1v6xk")

[node name="Ring" parent="." instance=ExtResource("10_smww1")]

[connection signal="player_reseted" from="." to="ScoreBar" method="_on_player_player_reseted"]
[connection signal="score_changed" from="." to="ScoreBar" method="_on_player_score_changed"]
[connection signal="goal_changed" from="ScoreBar" to="AnimationPlayer" method="_on_score_bar_goal_changed"]
[connection signal="animation_finished" from="AnimationPlayer" to="AnimationPlayer" method="_on_animation_finished"]
